# context-compression-lab

./: .gitignore  LITERATURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  passages.jsonl
reports/: results.csv  results.md
src/ccl/: __init__.py  benchmark.py  cli.py  corpus.py  cost.py  eval_llm.py  metrics.py  report.py  tokenization.py
src/ccl/compressors/: __init__.py  base.py  external.py  extractive.py  formats.py  lexical.py
tests/: test_ccl.py
