[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "context-compression-lab"
version = "0.1.0"
description = "A benchmark lab for token minimization: run many context-compression methods and measure token reduction vs. context preservation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Marc Albert" }]
requires-python = ">=3.9"
dependencies = ["tiktoken>=0.5", "matplotlib>=3.6", "numpy>=1.23"]

[project.optional-dependencies]
embed = ["sentence-transformers>=2.2"]
llmlingua = ["llmlingua>=0.2"]
llm = ["anthropic>=0.40"]
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8,<2"]

[project.scripts]
ccl = "ccl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
ignore_missing_imports = true   # tiktoken, matplotlib, sentence-transformers, anthropic are untyped at import
warn_redundant_casts = true
no_implicit_optional = true
